# ecg_anomaly_detection

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MODEL_CARD.md  NOTICE.md  README.md  SECURITY.md  eeg_explore.ipynb  explore.ipynb  explore_model2.ipynb  model.ipynb  pyproject.toml  report.ipynb  ruff.toml  wrangle.py
.claude/: CLAUDE.md  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_update.yml  governance_change.yml  modernization_task.yml  technical_debt.yml
.github/workflows/: dependabot-autofill.yml  full-history-scan.yml  held-out-evaluation.yml  metadata-governance.yml  notebook-validation.yml  project-item-autofill.yml  project-status-sync.yml  quality.yml  repository-hygiene.yml
.kiro/hooks/: contract-enforcement.json  gate-reminder.json  governance-first.json
.kiro/steering/: agent-conduct.md  github-project.md  project-context.md  seed-prompt-template.md  workflow-rules.md
archive/original_2022/: ATTRIBUTION.md  PROVENANCE.md  README.md
configs/: annotation-map-v1.toml  benchmark-policy-v1.toml  evaluation-baseline-v1.toml  evaluation-heldout.toml  mitdb-v1.0.0.toml  splitting-v1.toml  splitting-v2.toml  threshold-sweep-v1.toml  training-baseline-v1.toml  windowing-v1.toml
data/: README.md
docs/: README.md  annotation-mapping.md  architecture.md  baseline-evaluation.md  baseline-training.md  benchmark-governance.md  code-commentary-audit.md  data-integrity.md  data-provenance.md  dataset-acquisition.md  development.md  environment-reproducibility.md  evaluation-policy.md  held-out-evaluation.md  high-performing-gradient-boosting-example.md  historical-results.md  model-ready-dataset.md  modernization-roadmap.md  pipeline-design.md  pipeline-orchestration.md  record-grouped-splitting.md  record-validation.md  reproducibility-evidence.md  run-manifests.md  split-quality-reporting.md  threshold-sweep-analysis.md  window-extraction.md
docs/diagrams/: compose_inset.py  design-spec.md  pad_svg.py
docs/governance/: github-metadata-automation.md  github-project.md  index.md  issue-workflow.md  label-taxonomy.md  release-checklist.md  releases.md  repository-governance.md  repository-hygiene.md  security-policy.md  versioning.md
docs/portfolio/: agentic-engineering.md  data-engineering.md  governance.md  operational-maturity.md  reproducibility.md  testing-rigor.md
docs/releases/: v1.0.0.md  v1.1.0.md
notebooks/: 00-environment-setup-and-artifact-generation.ipynb  01-narrative-walkthrough.ipynb  02-high-performing-gradient-boosting-validation.ipynb  README.md  narrative-walkthrough.ipynb
notebooks/examples/: high-performing-gradient-boosting-validation.ipynb
notebooks/local/: README.md
scripts/: bootstrap_hosted_notebook.py  check_code_commentary.py  check_held_out_trigger_safety.py  check_notebook_commentary.py  check_privileged_workflow_safety.py  detect_board_drift.py  detect_label_drift.py  notebook_handoff.py  sync_github_labels.py  validate_curated_notebooks.py
(+106 files in other folders)
