[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "ecg-anomaly-detection"
version = "0.1.0"
description = "Historical ECG machine-learning project modernized as a reproducible data-pipeline case study"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
authors = [{ name = "Jared Godar" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.2,<3",
    "wfdb>=4.3,<5",
]

[project.scripts]
ecg-data = "ecg_anomaly_detection.cli:main"

[tool.hatch.build.targets.sdist]
# Without this, hatchling's default sdist includes the entire git-tracked tree
# (archive/original_2022/'s historical notebooks and images, .github/, tests/,
# docs/) -- unrelated to installing the package. Scope it to what a source
# distribution actually needs to build and identify the package.
include = [
  "src/",
  "README.md",
  "CHANGELOG.md",
  "NOTICE.md",
  "LICENSE",
]

[dependency-groups]
dev = [
  "nbformat>=5.10,<6",
  "pre-commit==4.6.0",
  "pyright>=1.1.411",
  "pytest>=8.4,<10",
  "pytest-cov>=6,<8",
]
notebooks = [
  "ipykernel>=7.3.0",
  "ipython>=9.15.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.10,<4",
  "matplotlib-inline>=0.2.2",
  "nbformat>=5.10,<6",
  "scikit-learn>=1.9.0",
]
experiments = [
  "lightgbm>=4.6.0",
  "scikit-learn>=1.9.0",
  "xgboost>=3.3.0",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers", "--import-mode=importlib"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ecg_anomaly_detection"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["archive", ".venv", "build", "dist"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false

[[tool.pyright.executionEnvironments]]
root = "src"
extraPaths = ["src"]
